# ascend_prl

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md
kernel/: CMakeLists.txt  pearl_hlc2_cube.asc  pearl_hlc2_vec.asc
proof-ffi/: Cargo.toml
proof-ffi/src/: lib.rs
scripts/: build.sh  coexist_guard.c  get_release.sh  launch.sh  run_container.sh
src/: blake3_join.c  miner.c  prep.c  proofgz.c  scan_mbatch_async.c
src/pools/: k1.c  kryptex.c  pool.h  stratum.c
